@@ -19,6 +19,7 @@ YACC            = @YACC@
 LEX             = @LEX@
 AWK             = @AWK@
 STRIP           = @STRIP@
+MAKEDEP         = @MAKEDEP@
 prefix          = @prefix@
 exec_prefix     = @exec_prefix@
 bindir          = @bindir@
@@ -64,7 +65,6 @@ DEFS           += $(subs -DHAVE_CONFIG_H,,@DEFS@)
 CPPFLAGS       += @CPPFLAGS@ $(INCLUDEFLAGS) -I. -I$(top_builddir) -I$(srcdir)/$(SLIB) -I$(srcdir)
 CFLAGS         += @CFLAGS@ @WALL_FLAG@
 LDFLAGS        += @LDFLAGS@
-M_OR_MM         = @M_OR_MM@
 
 EXTRALIBS      += @LIBS@
 
